tests/test14.c
#include <stdio.h>

int main() {
	int x = 1, y = 2, x = 25;

	void z = 25;

	long m, m = m + m;

	printf("%d\n", z);
}